// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-action-button Testing snapshots Testing default button 1`] = `
<wpp-action-button class="wpp-action-button" exportparts="button, spinner-wrapper, spinner, body, icon-start-wrapper, icon-start, icon-end-wrapper, icon-end, inner, overlay">
  <mock:shadow-root>
    <button aria-pressed="false" class="primary" data-testid="wppActionButton" part="button" type="button">
      <div class="content" part="body">
        <div class="icon-start slot-hidden" part="icon-start-wrapper">
          <slot name="icon-start" part="icon-start"></slot>
        </div>
        <slot part="inner"></slot>
        <div class="icon-end slot-hidden" part="icon-end-wrapper">
          <slot name="icon-end" part="icon-end"></slot>
        </div>
      </div>
    </button>
    <div class="overlay" part="overlay"></div>
  </mock:shadow-root>
  Button
</wpp-action-button>
`;

exports[`wpp-action-button Testing snapshots Testing disabled button 1`] = `
<wpp-action-button class="wpp-action-button wpp-disabled" disabled="" exportparts="button, spinner-wrapper, spinner, body, icon-start-wrapper, icon-start, icon-end-wrapper, icon-end, inner, overlay">
  <mock:shadow-root>
    <button aria-pressed="false" class="disabled primary" data-testid="wppActionButton" disabled="" part="button" type="button">
      <div class="content" part="body">
        <div class="icon-start slot-hidden" part="icon-start-wrapper">
          <slot name="icon-start" part="icon-start"></slot>
        </div>
        <slot part="inner"></slot>
        <div class="icon-end slot-hidden" part="icon-end-wrapper">
          <slot name="icon-end" part="icon-end"></slot>
        </div>
      </div>
    </button>
    <div class="overlay" part="overlay"></div>
  </mock:shadow-root>
  Button
</wpp-action-button>
`;

exports[`wpp-action-button Testing snapshots Testing loading secondary submit button 1`] = `
<wpp-action-button class="wpp-action-button wpp-loading" exportparts="button, spinner-wrapper, spinner, body, icon-start-wrapper, icon-start, icon-end-wrapper, icon-end, inner, overlay" loading="" type="submit" variant="secondary">
  <mock:shadow-root>
    <button aria-pressed="false" class="loading secondary" data-testid="wppActionButton" disabled="" part="button" type="submit">
      <div class="loader" part="spinner-wrapper">
        <wpp-spinner color="var(--wpp-grey-color-800)" part="spinner"></wpp-spinner>
      </div>
      <div class="content hide" part="body">
        <div class="icon-start slot-hidden" part="icon-start-wrapper">
          <slot name="icon-start" part="icon-start"></slot>
        </div>
        <slot part="inner"></slot>
        <div class="icon-end slot-hidden" part="icon-end-wrapper">
          <slot name="icon-end" part="icon-end"></slot>
        </div>
      </div>
    </button>
    <div class="overlay" part="overlay"></div>
  </mock:shadow-root>
  Submit Button
</wpp-action-button>
`;

exports[`wpp-action-button Testing snapshots Testing reset button with icon-start slot 1`] = `
<wpp-action-button class="wpp-action-button wpp-loading" exportparts="button, spinner-wrapper, spinner, body, icon-start-wrapper, icon-start, icon-end-wrapper, icon-end, inner, overlay" loading="" type="reset" variant="secondary">
  <mock:shadow-root>
    <button aria-pressed="false" class="loading secondary with-icon-start" data-testid="wppActionButton" disabled="" part="button" type="reset">
      <div class="loader" part="spinner-wrapper">
        <wpp-spinner color="var(--wpp-grey-color-800)" part="spinner"></wpp-spinner>
      </div>
      <div class="content hide" part="body">
        <div class="icon-start" part="icon-start-wrapper">
          <slot name="icon-start" part="icon-start"></slot>
        </div>
        <slot part="inner"></slot>
        <div class="icon-end slot-hidden" part="icon-end-wrapper">
          <slot name="icon-end" part="icon-end"></slot>
        </div>
      </div>
    </button>
    <div class="overlay" part="overlay"></div>
  </mock:shadow-root>
  <wpp-icon-arrow slot="icon-start"></wpp-icon-arrow>
  Reset Button
</wpp-action-button>
`;

exports[`wpp-action-button Testing snapshots Testing submit button 1`] = `
<wpp-action-button class="wpp-action-button" exportparts="button, spinner-wrapper, spinner, body, icon-start-wrapper, icon-start, icon-end-wrapper, icon-end, inner, overlay" type="submit">
  <mock:shadow-root>
    <button aria-pressed="false" class="primary" data-testid="wppActionButton" part="button" type="submit">
      <div class="content" part="body">
        <div class="icon-start slot-hidden" part="icon-start-wrapper">
          <slot name="icon-start" part="icon-start"></slot>
        </div>
        <slot part="inner"></slot>
        <div class="icon-end slot-hidden" part="icon-end-wrapper">
          <slot name="icon-end" part="icon-end"></slot>
        </div>
      </div>
    </button>
    <div class="overlay" part="overlay"></div>
  </mock:shadow-root>
  Submit Button
</wpp-action-button>
`;

exports[`wpp-action-button Testing snapshots Testing submit button with icon-end slot and tab-focus 1`] = `
<wpp-action-button class="wpp-action-button wpp-loading" exportparts="button, spinner-wrapper, spinner, body, icon-start-wrapper, icon-start, icon-end-wrapper, icon-end, inner, overlay" loading="" type="submit" variant="secondary">
  <mock:shadow-root>
    <button aria-pressed="false" class="loading secondary tab-focus with-icon-end" data-testid="wppActionButton" disabled="" part="button" type="submit">
      <div class="loader" part="spinner-wrapper">
        <wpp-spinner color="var(--wpp-grey-color-800)" part="spinner"></wpp-spinner>
      </div>
      <div class="content hide" part="body">
        <div class="icon-start slot-hidden" part="icon-start-wrapper">
          <slot name="icon-start" part="icon-start"></slot>
        </div>
        <slot part="inner"></slot>
        <div class="icon-end" part="icon-end-wrapper">
          <slot name="icon-end" part="icon-end"></slot>
        </div>
      </div>
    </button>
    <div class="overlay" part="overlay"></div>
  </mock:shadow-root>
  Submit Button
  <wpp-icon-arrow slot="icon-end"></wpp-icon-arrow>
</wpp-action-button>
`;
